# aoc

./: Cargo.toml
2023/: choc1a.rs  choc1b.rs
2023/1/: choc1a.rs  choc1b.rs
2023/2/: choc2a.rs  choc2b.rs
2023/3/: choc3a.rs  choc3b.rs  input.txt
2023/4/: choc4a.rs  choc4b.rs
2023/5/: choc5a.rs  choc5b.rs
2023/6/: choc6a.rs  choc6b.rs
2023/7/: choc7a.rs  choc7b.rs
2023/8/: choc8a.rs  choc8b.cc.rs  choc8b.rs
