[package]
name = "aoc"
version = "0.0.1"

[[bin]]
name = "choc1a"
path = "2023/1/choc1a.rs"

[[bin]]
name = "choc1b"
path = "2023/1/choc1b.rs"

[[bin]]
name = "choc2a"
path = "2023/2/choc2a.rs"

[[bin]]
name = "choc2b"
path = "2023/2/choc2b.rs"

[[bin]]
name = "choc3a"
path = "2023/3/choc3a.rs"


[[bin]]
name = "choc3b"
path = "2023/3/choc3b.rs"

[[bin]]
name = "choc4a"
path = "2023/4/choc4a.rs"

[[bin]]
name = "choc4b"
path = "2023/4/choc4b.rs"


[[bin]]
name = "choc5a"
path = "2023/5/choc5a.rs"

[[bin]]
name = "choc5b"
path = "2023/5/choc5b.rs"

[[bin]]
name = "choc6a"
path = "2023/6/choc6a.rs"

[[bin]]
name = "choc6b"
path = "2023/6/choc6b.rs"


[[bin]]
name = "choc7a"
path = "2023/7/choc7a.rs"

[[bin]]
name = "choc7b"
path = "2023/7/choc7b.rs"


[dependencies]
combine = "4.6.6"
